Styled scrollbar and fixed 'jumping'

--- a/src/scss/_aboutmodal.scss
+++ b/src/scss/_aboutmodal.scss
@@ -21,8 +21,8 @@
     display: flex;
     justify-content: center;
     > img {
-        height: 100px;
-        width: 300px;
+        height: 30%;
+        width: 90%;
     }
 }
 
